# duckdb_notion

./: .cursorrules  .env.test  .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
scripts/: setup-custom-toolchain.sh
src/: notion_auth.cpp  notion_copy.cpp  notion_extension.cpp  notion_read.cpp  notion_requests.cpp  notion_utils.cpp
src/include/: notion_auth.hpp  notion_copy.hpp  notion_extension.hpp  notion_read.hpp  notion_requests.hpp  notion_types.hpp  notion_utils.hpp
test/: notion_test.cpp
test/sql/: notion.test
